renaming properties
